# urirdp

./: .gitignore  README.md  pyproject.toml  urirdp.markpact.md
markpacts/: urirdp.markpact.md
tests/: test_manifest.py
urirdp/: __init__.py  handlers.py  manifest.yaml  routes.py
