[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirdp"
version = "0.1.0"
description = "rdp:// URI capability pack for RDP/X11 desktop automation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["uricontrol>=0.1.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.uv.sources]

[tool.setuptools.packages.find]
where = ["."]
include = ["urirdp*"]

[tool.setuptools.package-data]
urirdp = ["manifest.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
